# ag-vision-dataops

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
ag_vision.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ag_vision/constants/: paths.py
ag_vision/core/: image.py  img_qc.py  ingest.py
ag_vision/data_io/: annotation_io.py  aws_io.py  databricks_io.py  roboflow_io.py  schemas.py
ag_vision/drone/: ingest.py  utils.py
ag_vision/mobile/: image.py
ag_vision/pipelines/: drone_processing.py  image_processing.py
ag_vision/rover/: ingest.py
examples/databricks/: 0.field_image_local_upload_to_databricks.ipynb  1.create_image_table_in_databricks.ipynb  2.add_metadata_to_images_in_databricks.ipynb  3.explore_the_data_available_for_labeling.ipynb  4.generate_annotation_batch_and_push_to_roboflow.ipynb  5.download_annotation_batch_from_roboflow.ipynb
examples/drone_data/: agisoft_stiching_example_ms.ipynb  ortho_cropping_example.ipynb  upload_drone_data_to_databricks.ipynb
examples/google_drive/: 0. upload_data_from_google_drive.ipynb
notebooks/: convert_csv_gcp_to_geojson.ipynb  image_processing_pipeline_dev.ipynb  roboflow_upload_download_example.ipynb  save_dataset_in_coco_json.ipynb
tests/: test_field_images.py  test_paths.py
