[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"


[project]
name = "ag-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.38.34",
    "databricks>=0.2",
    "databricks-sdk>=0.57.0",
    "geopandas>=1.1.0",
    "google-cloud-storage>=3.1.1",
    "jsonschema>=4.25.1",
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.0.0",
    "pandas-stubs==2.3.2.250926",
    "pytest>=8.4.2",
    "roboflow>=1.2.6",
    "setuptools>=80.9.0",
    "tiffile>=2018.10.18",
    "tqdm>=4.67.1",
    "open-aglabs @ git+https://github.com/AgDMALabs-Public/AgDMALabs-open.git",
    "numpy>=1.5.0",
    "torchvision>=0.24.1",
    "huggingface-hub>=1.1.5",
    "fastapi>=0.123.8",
    "python-dotenv>=0.9.9",

]

[tool.setuptools]
# This section tells setuptools what to do.
package-data = { "ag_vision" = ["model_weights/**/*"] }


[tool.setuptools.packages.find]
# Explicitly include only the 'ag_vision' package and its sub-packages.
# This will ignore the 'notebooks', 'pipelines', and other top-level folders.
include = ["ag_vision*"]
